--- a/src/workflow_trigger_dataform.yml
+++ b/src/workflow_trigger_dataform.yml
@@ -16,7 +16,7 @@ main:
                 auth:
                     type: OAuth2
                 body:
-                    gitCommitish: main
+                    gitCommitish: ${dataform_workspace_name}
             result: compilationResult
         retry:
             max_retries: 3
