--- a/src/function_send_notification/package.json
+++ b/src/function_send_notification/package.json
@@ -7,6 +7,7 @@
     },
     "author": "Krisjan Oldekamp",
     "dependencies": {
-      "@google-cloud/functions-framework": "^3.3.0"
+      "@google-cloud/functions-framework": "^3.3.0",
+      "axios": "^1.6.8"
     }
   }
